crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_self_macro_call.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% macro x() %}{{ x() }}{% endmacro %}\n{{ x() }}"
info:
  __minijinja_current_path: err_self_macro_call.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_self_macro_call.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "recursion limit exceeded",
    name: "err_self_macro_call.txt",
}

invalid operation: recursion limit exceeded
(in err_self_macro_call.txt:2:1)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
(in err_self_macro_call.txt:1:16)
