crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_toplevel_break.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% break %}"
info:
  __minijinja_current_path: err_toplevel_break.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_toplevel_break.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "'break' must be placed inside a loop",
    name: "err_toplevel_break.txt",
}

syntax error: 'break' must be placed inside a loop
(in err_toplevel_break.txt:1:1)
